--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/idea?serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
-
+mybatis.configuration.map-underscore-to-camel-case=true
 #修改上传文件大小
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
+
+#文件上传路径
+file.upload.path=E:/worldstear/
+
+#spring.thymeleaf.cache=true
+#spring.devtools.restart.enabled=true
+#spring.devtools.restart.additional-paths=src/main/java
+
+#spring.mvc.static-path-pattern=/static/**
