--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ file.upload.path=E:/worldstear/
 #spring.devtools.restart.additional-paths=src/main/java
 
 #spring.mvc.static-path-pattern=/static/**
+logging.level.com.example.bootstrap.mapper=debug
