coding share mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ file.upload.path=E:/worldstear/
 #spring.devtools.restart.additional-paths=src/main/java
 
 #spring.mvc.static-path-pattern=/static/**
+#开启mybatis日志输出
 logging.level.com.example.bootstrap.mapper=debug
